# ArcHandler

./: .gitignore  README.md  README_zh.md  privacy-policy.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/cc/kafuu/archandler/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_lib.cpp
app/src/main/cpp/src/: archive_builder.cc  archive_builder.hpp  archive_common.hpp  archive_extractor.cc  archive_extractor.hpp  native_lib.cc  native_logger.hpp
app/src/main/cpp/utils/: archive_utils.hpp  file_utils.hpp  jni_utils.hpp
app/src/main/java/cc/kafuu/archandler/: ArchHandlerApp.kt
app/src/main/java/cc/kafuu/archandler/feature/about/: AboutActivity.kt
app/src/main/java/cc/kafuu/archandler/feature/about/ui/: AboutLayout.kt  AboutView.kt
app/src/main/java/cc/kafuu/archandler/feature/archiveoptions/: ArchiveOptionsActivity.kt  ArchiveOptionsViewModel.kt
app/src/main/java/cc/kafuu/archandler/feature/archiveoptions/presentation/: ArchiveOptionsUiIntent.kt  ArchiveOptionsUiState.kt  ArchiveOptionsViewEvent.kt
app/src/main/java/cc/kafuu/archandler/feature/archiveoptions/ui/: ArchiveOptionsView.kt
app/src/main/java/cc/kafuu/archandler/feature/archiveview/: ArchiveViewActivity.kt  ArchiveViewViewModel.kt
app/src/main/java/cc/kafuu/archandler/feature/archiveview/presentation/: ArchiveViewUiIntent.kt  ArchiveViewUiState.kt  ArchiveViewViewEvent.kt
app/src/main/java/cc/kafuu/archandler/feature/archiveview/ui/: ArchiveViewLayout.kt
app/src/main/java/cc/kafuu/archandler/feature/createarchive/: CreateArchiveActivity.kt  CreateArchiveViewModel.kt
app/src/main/java/cc/kafuu/archandler/feature/createarchive/capabilities/: CompressEncryptable.kt  CompressLevelConfigurable.kt  CompressSplittable.kt
app/src/main/java/cc/kafuu/archandler/feature/createarchive/extensions/: CompressEncryptableExtensions.kt  CompressLevelConfigurableExtensions.kt  CompressSplittableExtensions.kt  CreateArchiveUiStateExtensions.kt
app/src/main/java/cc/kafuu/archandler/feature/createarchive/model/: ArchiveFormat.kt  CompressionType.kt
app/src/main/java/cc/kafuu/archandler/feature/createarchive/presentation/: CreateArchiveUiIntent.kt  CreateArchiveUiState.kt  (+1 more)
app/src/main/java/cc/kafuu/archandler/feature/duplicatefinder/: DuplicateFinderActivity.kt  DuplicateFinderViewModel.kt
app/src/main/java/cc/kafuu/archandler/feature/importfile/: ImportFileActivity.kt  ImportFileViewModel.kt
app/src/main/java/cc/kafuu/archandler/feature/main/: MainActivity.kt  MainViewModel.kt
app/src/main/java/cc/kafuu/archandler/feature/settings/: SettingsActivity.kt  SettingsViewModel.kt
app/src/main/java/cc/kafuu/archandler/feature/storagepicker/: StoragePickerActivity.kt  StoragePickerViewModel.kt
app/src/main/java/cc/kafuu/archandler/libs/: AppLibs.kt  AppModel.kt
app/src/main/java/cc/kafuu/archandler/libs/archive/: ArchiveManager.kt  IArchive.kt  IArchiveManager.kt  IPacker.kt  IPasswordProvider.kt
app/src/main/java/cc/kafuu/archandler/libs/core/: AppViewEvent.kt  CoreActivity.kt  CoreActivityWithEvent.kt  CoreViewModel.kt  CoreViewModelWithEvent.kt  ViewEventWrapper.kt
app/src/main/java/cc/kafuu/archandler/libs/ext/: AnyExt.kt  ColorExt.kt  ContextExt.kt  FileExt.kt  PathExt.kt
app/src/main/java/cc/kafuu/archandler/libs/extensions/: ColorExtensions.kt  CompressionOptionExtensions.kt  ContextExtensions.kt  FileExtensions.kt  PathExtensions.kt
app/src/main/java/cc/kafuu/archandler/libs/jni/: NativeCallback.kt  NativeLib.kt
app/src/main/java/cc/kafuu/archandler/libs/manager/: CacheManager.kt  DataTransferManager.kt  FileManager.kt
app/src/main/java/cc/kafuu/archandler/libs/model/: AppInfo.kt  ArchiveViewData.kt  CacheType.kt  CreateArchiveData.kt  DefaultAppType.kt  FileConflictStrategy.kt  FileType.kt  LayoutType.kt  LoadingState.kt  StorageData.kt
app/src/main/java/cc/kafuu/archandler/libs/utils/: Common.kt  DeferredResult.kt  ParallelSortWith.kt  ResultFuture.kt  TestUtils.kt
app/src/main/java/cc/kafuu/archandler/ui/: MainActivity.kt
app/src/main/java/cc/kafuu/archandler/ui/dialogs/: AppLoadDialog.kt  AppPickerDialog.kt  ArchiveTestResultDialog.kt  ConfirmDialog.kt  FileConflictDialog.kt  InputConfirmDialog.kt  PasswordInputDialog.kt  SortSelectDialog.kt  TextConfirmDialog.kt
app/src/main/java/cc/kafuu/archandler/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/cc/kafuu/archandler/ui/utils/: Painter.kt  Stack.kt
app/src/main/java/cc/kafuu/archandler/ui/widges/: AppItemCard.kt  AppLazyColumn.kt  AppLazyGridView.kt  AppLoadSwitch.kt  AppPrimaryButton.kt  AppTopBar.kt  Button.kt  Card.kt  DirectoryPathBar.kt  IconMessageView.kt  Item.kt  LazyList.kt  LoadingView.kt  SettingItem.kt  TitleBar.kt
app/src/main/java/cc/kafuu/archandler/vm/: MainViewModel.kt
app/src/main/res/drawable/: ic_aboutt.xml  ic_archive.xml  ic_arrow_forward.xml  ic_check_circle.xml  ic_circle.xml  ic_close.xml  ic_code.xml  ic_empty_folder.xml  ic_error.xml  ic_feedback.xml  ic_file.xml  ic_file_apk.xml  ic_file_copy.xml  ic_file_database.xml  ic_file_docs.xml  ic_file_image.xml  ic_file_movie.xml  ic_file_moving.xml  ic_file_music.xml  ic_file_pdf.xml  ic_folder.xml  ic_folder_off.xml  ic_grid_view.xml  ic_launcher_foreground.xml  ic_list_view.xml  ic_logo.xml  ic_menu.xml  ic_more_vert.xml  ic_packing.xml  ic_password_visibility.xml  ic_password_visibility_off.xml  ic_paste.xml  ic_rate.xml  ic_search.xml  ic_storage.xml  ic_unpacking.xml  ic_visibility.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: resource_paths.xml
app/src/test/java/cc/kafuu/archandler/: ExampleUnitTest.kt  ParallelSortPerformanceTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+80 files in other folders)
